--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="toggle"></div>
         </header>
 
-        <video src="video.mp4" muted loop autoplay></video>
+<!--        <video src="video.mp4" muted loop autoplay></video>-->
 
         <div class="overlay"></div>
 
