Add urls and update style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="toggle"></div>
         </header>
 
-<!--        <video src="video.mp4" muted loop autoplay></video>-->
+        <video src="https://traversymedia.com/downloads/videos/explore.mp4" muted loop autoplay></video>
 
         <div class="overlay"></div>
 
@@ -26,9 +26,9 @@
         </div>
 
         <ul class="social">
-            <li><img src="facebook.png" alt=""></li>
-            <li><img src="twitter.png" alt=""></li>
-            <li><img src="instagram.png" alt=""></li>
+            <li><img src="https://i.ibb.co/x7P24fL/facebook.png" alt=""></li>
+            <li><img src="https://i.ibb.co/Wnxq2Nq/twitter.png" alt=""></li>
+            <li><img src="https://i.ibb.co/ySwtH4B/instagram.png" alt=""></li>
         </ul>
     </section>
 
