--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </div>
 
         <ul class="social">
-            <li><img src="https://i.ibb.co/x7P24fL/facebook.png" alt=""></li>
-            <li><img src="https://i.ibb.co/Wnxq2Nq/twitter.png" alt=""></li>
-            <li><img src="https://i.ibb.co/ySwtH4B/instagram.png" alt=""></li>
+            <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png" alt=""></a></li>
+            <li><a href="#"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png" alt=""></a></li>
+            <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png" alt=""></a></li>
         </ul>
     </section>
 
