--- a/index.html
+++ b/index.html
@@ -41,5 +41,15 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </div>
+
+    <script>
+        const menuToggle = document.querySelector('.toggle');
+        const showcase = document.querySelector('.showcase');
+
+        menuToggle.addEventListener('click', () => {
+            menuToggle.classList.toggle('active');
+            showcase.classList.toggle('active');
+        })
+    </script>
 </body>
 </html>
