--- a/index.html
+++ b/index.html
@@ -1,155 +1,273 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Links -->
-    <!-- Font Awesome -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-      rel="stylesheet"
-    />
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-      rel="stylesheet"
-    />
-    <!-- MDB -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.1.0/mdb.min.css"
-      rel="stylesheet"
-    />
-    <title>Mezidia official page</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1,
+      shrink-to-fit=no" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <title>Resume - Start Bootstrap Theme</title>
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+  <!-- Font Awesome icons (free version)-->
+  <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+  <!-- Google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+  <!-- Core theme CSS (includes Bootstrap)-->
+  <link href="css/styles.css" rel="stylesheet" />
 </head>
-<body>
-    <header>
-      <!-- Intro settings -->
-      <style>
-        /* Default height for small devices */
-        #intro-example {
-          height: 400px;
-        }
 
-        /* Height for devices larger than 992px */
-        @media (min-width: 992px) {
-          #intro-example {
-            height: 600px;
-          }
-        }
-      </style>
-
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top scrolling-navbar">
-      <!-- Container wrapper -->
-      <div class="container-fluid">
-        <!-- Toggle button -->
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-mdb-toggle="collapse"
-          data-mdb-target="#navbarCenteredExample"
-          aria-controls="navbarCenteredExample"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <i class="fas fa-bars"></i>
-        </button>
-
-        <!-- Collapsible wrapper -->
-        <div
-          class="collapse navbar-collapse justify-content-center"
-          id="navbarCenteredExample"
-        >
-          <!-- Left links -->
-          <ul class="navbar-nav mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <!-- Navbar dropdown -->
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-mdb-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Dropdown
-              </a>
-              <!-- Dropdown menu -->
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"
-                >Disabled</a
-              >
-            </li>
-          </ul>
-          <!-- Left links -->
+<body id="page-top">
+  <!-- Navigation-->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-none d-lg-block"><img class="img-fluid img-profile
+            rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+        class="navbar-toggler-icon"></span></button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+      </ul>
+    </div>
+  </nav>
+  <!-- Page Content-->
+  <div class="container-fluid p-0">
+    <!-- About-->
+    <section class="resume-section" id="about">
+      <div class="resume-section-content">
+        <h1 class="mb-0">
+          Clarence
+          <span class="text-primary">Taylor</span>
+        </h1>
+        <div class="subheading mb-5">
+          3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+          <a href="mailto:name@email.com">name@email.com</a>
         </div>
-        <!-- Collapsible wrapper -->
+        <p class="lead mb-5">I am experienced in leveraging agile frameworks
+          to provide a robust synopsis for high level overviews. Iterative
+          approaches to corporate strategy foster collaborative thinking to
+          further the overall value proposition.</p>
+        <div class="social-icons">
+          <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
+          <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
+          <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
+          <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+        </div>
       </div>
-      <!-- Container wrapper -->
-    </nav>
-      <!-- Navbar -->
-
-      <!-- Background image -->
-      <div
-        id="intro-example"
-        class="p-5 text-center bg-image"
-        style="background-image: url('https://mdbootstrap.com/img/new/slides/041.jpg')"
-      >
-        <div class="mask" style="background-color: rgba(0, 0, 0, 0.7)">
-          <div class="d-flex justify-content-center align-items-center h-100">
-            <div class="text-white">
-              <h1 class="mb-3">Learn Bootstrap 5 with MDB</h1>
-              <h5 class="mb-4">Best & free guide of responsive web design</h5>
-              <a
-                class="btn btn-outline-light btn-lg m-2"
-                href="https://www.youtube.com/watch?v=c9B4TPnak1A"
-                role="button"
-                rel="nofollow"
-                target="_blank"
-                >Start tutorial</a
-              >
-              <a
-                class="btn btn-outline-light btn-lg m-2"
-                href="https://mdbootstrap.com/docs/standard/"
-                target="_blank"
-                role="button"
-                >Download MDB UI KIT</a
-              >
-            </div>
+    </section>
+    <hr class="m-0" />
+    <!-- Experience-->
+    <section class="resume-section" id="experience">
+      <div class="resume-section-content">
+        <h2 class="mb-5">Experience</h2>
+        <div class="d-flex flex-column flex-md-row justify-content-between
+            mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Senior Web Developer</h3>
+            <div class="subheading mb-3">Intelitec Solutions</div>
+            <p>Bring to the table win-win survival strategies to ensure
+              proactive domination. At the end of the day, going forward, a
+              new normal that has evolved from generation X is on the runway
+              heading towards a streamlined cloud solution. User generated
+              content in real-time will have multiple touchpoints for
+              offshoring.</p>
           </div>
+          <div class="flex-shrink-0"><span class="text-primary">March 2013 -
+              Present</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between
+            mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Web Developer</h3>
+            <div class="subheading mb-3">Intelitec Solutions</div>
+            <p>Capitalize on low hanging fruit to identify a ballpark value
+              added activity to beta test. Override the digital divide with
+              additional clickthroughs from DevOps. Nanotechnology immersion
+              along the information highway will close the loop on focusing
+              solely on the bottom line.</p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">December 2011
+              - March 2013</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between
+            mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Junior Web Designer</h3>
+            <div class="subheading mb-3">Shout! Media Productions</div>
+            <p>Podcasting operational change management inside of workflows to
+              establish a framework. Taking seamless key performance
+              indicators offline to maximise the long tail. Keeping your eye
+              on the ball while performing a deep dive on the start-up
+              mentality to derive convergence on cross-platform integration.</p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">July 2010 -
+              December 2011</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Web Design Intern</h3>
+            <div class="subheading mb-3">Shout! Media Productions</div>
+            <p>Collaboratively administrate empowered markets via
+              plug-and-play networks. Dynamically procrastinate B2C users
+              after installed base benefits. Dramatically visualize customer
+              directed convergence without revolutionary ROI.</p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">September 2008
+              - June 2010</span></div>
         </div>
       </div>
-        <p>Scroll down</p>
-        <p>Scroll down</p>
-        <p>Scroll down</p>
-        <p>Scroll down</p>
-        <p>Scroll down</p>
-        <p>Scroll down</p>
-        <p>Scroll down</p>
-        <p>Scroll down</p>
-        <p>Scroll down</p>
-        <p>Scroll down</p>
-      <!-- Background image -->
-    </header>
-    <!-- MDB -->
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.1.0/mdb.min.js"
-    ></script>
+    </section>
+    <hr class="m-0" />
+    <!-- Education-->
+    <section class="resume-section" id="education">
+      <div class="resume-section-content">
+        <h2 class="mb-5">Education</h2>
+        <div class="d-flex flex-column flex-md-row justify-content-between
+            mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">University of Colorado Boulder</h3>
+            <div class="subheading mb-3">Bachelor of Science</div>
+            <div>Computer Science - Web Development Track</div>
+            <p>GPA: 3.23</p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">August 2006 -
+              May 2010</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">James Buchanan High School</h3>
+            <div class="subheading mb-3">Technology Magnet Program</div>
+            <p>GPA: 3.56</p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">August 2002 -
+              May 2006</span></div>
+        </div>
+      </div>
+    </section>
+    <hr class="m-0" />
+    <!-- Skills-->
+    <section class="resume-section" id="skills">
+      <div class="resume-section-content">
+        <h2 class="mb-5">Skills</h2>
+        <div class="subheading mb-3">Programming Languages & Tools</div>
+        <ul class="list-inline dev-icons">
+          <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+          <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+          <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+          <li class="list-inline-item"><i class="fab fa-angular"></i></li>
+          <li class="list-inline-item"><i class="fab fa-react"></i></li>
+          <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
+          <li class="list-inline-item"><i class="fab fa-sass"></i></li>
+          <li class="list-inline-item"><i class="fab fa-less"></i></li>
+          <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
+          <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
+          <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
+          <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+        </ul>
+        <div class="subheading mb-3">Workflow</div>
+        <ul class="fa-ul mb-0">
+          <li>
+            <span class="fa-li"><i class="fas fa-check"></i></span>
+            Mobile-First, Responsive Design
+          </li>
+          <li>
+            <span class="fa-li"><i class="fas fa-check"></i></span>
+            Cross Browser Testing & Debugging
+          </li>
+          <li>
+            <span class="fa-li"><i class="fas fa-check"></i></span>
+            Cross Functional Teams
+          </li>
+          <li>
+            <span class="fa-li"><i class="fas fa-check"></i></span>
+            Agile Development & Scrum
+          </li>
+        </ul>
+      </div>
+    </section>
+    <hr class="m-0" />
+    <!-- Interests-->
+    <section class="resume-section" id="interests">
+      <div class="resume-section-content">
+        <h2 class="mb-5">Interests</h2>
+        <p>Apart from being a web developer, I enjoy most of my time being
+          outdoors. In the winter, I am an avid skier and novice ice climber.
+          During the warmer months here in Colorado, I enjoy mountain biking,
+          free climbing, and kayaking.</p>
+        <p class="mb-0">When forced indoors, I follow a number of sci-fi and
+          fantasy genre movies and television shows, I am an aspiring chef,
+          and I spend a large amount of my free time exploring the latest
+          technology advancements in the front-end web development world.</p>
+      </div>
+    </section>
+    <hr class="m-0" />
+    <!-- Awards-->
+    <section class="resume-section" id="awards">
+      <div class="resume-section-content">
+        <h2 class="mb-5">Awards & Certifications</h2>
+        <ul class="fa-ul mb-0">
+          <li>
+            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+            Google Analytics Certified Developer
+          </li>
+          <li>
+            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+            Mobile Web Specialist - Google Certification
+          </li>
+          <li>
+            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+            1
+            <sup>st</sup>
+            Place - University of Colorado Boulder - Emerging Tech Competition
+            2009
+          </li>
+          <li>
+            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+            1
+            <sup>st</sup>
+            Place - University of Colorado Boulder - Adobe Creative Jam 2008
+            (UI Design Category)
+          </li>
+          <li>
+            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+            2
+            <sup>nd</sup>
+            Place - University of Colorado Boulder - Emerging Tech Competition
+            2008
+          </li>
+          <li>
+            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+            1
+            <sup>st</sup>
+            Place - James Buchanan High School - Hackathon 2006
+          </li>
+          <li>
+            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+            3
+            <sup>rd</sup>
+            Place - James Buchanan High School - Hackathon 2005
+          </li>
+        </ul>
+      </div>
+    </section>
+  </div>
+  <!-- Bootstrap core JS-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Third party plugin JS-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+  <!-- Core theme JS-->
+  <script src="js/scripts.js"></script>
 </body>
+
 </html>
