--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Mezidia official page</title>
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -46,8 +46,8 @@
     <section class="resume-section" id="about">
       <div class="resume-section-content">
         <h1 class="mb-0">
-          Clarence
-          <span class="text-primary">Taylor</span>
+          MEZI
+          <span class="text-primary">DIA</span>
         </h1>
         <div class="subheading mb-5">
           3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
