Add styles for headers

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1,
       shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="description" content="Main and official site of Mezidia organization" />
+  <meta name="author" content="mezidia" />
   <title>Mezidia official page</title>
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
@@ -46,7 +46,7 @@
     <section class="resume-section" id="about">
       <div class="resume-section-content">
         <h1 class="mb-0">
-          MEZI
+          <span class="head-animation">MEZI</span>
           <span class="text-primary">DIA</span>
         </h1>
         <div class="subheading mb-5">
