--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-block d-lg-none">Mezidia</span>
       <span class="d-none d-lg-block"><img class="img-fluid img-profile
             rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
     </a>
@@ -50,18 +50,18 @@
           <span class="text-primary">DIA</span>
         </h1>
         <div class="subheading mb-5">
-          3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+          03056 Politekhnichna Street · Kyiv ·
+          <a href="mailto:mezgoodle@gmail.com">mezgoodle@gmail.com</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks
           to provide a robust synopsis for high level overviews. Iterative
           approaches to corporate strategy foster collaborative thinking to
           further the overall value proposition.</p>
         <div class="social-icons">
-          <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-          <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-          <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+          <a class="social-icon" href="#" title="Discord profile"><i class="fab fa-discord"></i></a>
+          <a class="social-icon" href="#" title="GitHub page"><i class="fab fa-github"></i></a>
+          <a class="social-icon" href="#" title="Telegram profile"><i class="fab fa-telegram"></i></a>
+          <a class="social-icon" href="#" title="Facebook profile"><i class="fab fa-facebook-f"></i></a>
         </div>
       </div>
     </section>
