--- a/index.html
+++ b/index.html
@@ -53,15 +53,11 @@
           03056 Politekhnichna Street · Kyiv ·
           <a href="mailto:mezgoodle@gmail.com">mezgoodle@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks
-          to provide a robust synopsis for high level overviews. Iterative
-          approaches to corporate strategy foster collaborative thinking to
-          further the overall value proposition.</p>
+        <p class="lead mb-5">We are the young organization of smart, creative and interesting people. Every day we learn something new, create and improve ourselves. We also like to have fun together and play. And We make applications for people.</p>
         <div class="social-icons">
-          <a class="social-icon" href="#" title="Discord profile"><i class="fab fa-discord"></i></a>
-          <a class="social-icon" href="#" title="GitHub page"><i class="fab fa-github"></i></a>
-          <a class="social-icon" href="#" title="Telegram profile"><i class="fab fa-telegram"></i></a>
-          <a class="social-icon" href="#" title="Facebook profile"><i class="fab fa-facebook-f"></i></a>
+          <a class="social-icon" href="https://github.com/mezidia" title="GitHub page" target="blank"><i class="fab fa-github"></i></a>
+          <a class="social-icon" href="https://t.me/sylvenis" title="Telegram profile" target="blank"><i class="fab fa-telegram"></i></a>
+          <a class="social-icon" href="https://www.facebook.com/profile.php?id=100005721694357" title="Facebook profile" target="blank"><i class="fab fa-facebook-f"></i></a>
         </div>
       </div>
     </section>
