Update members section

--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
     <section class="resume-section" id="projects">
       <div class="resume-section-content">
         <h2 class="mb-5">Projects</h2>
-        <div class="d-flex flex-column flex-md-row justify-content-between
-            mb-5">
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
             <a class="h3 mb-0" href="https://github.com/mezidia/flask-jobs" target="blank">flask-jobs</a>
             <div class="subheading mb-3">Flask REST-API </div>
@@ -76,8 +75,7 @@
           <div class="flex-shrink-0"><span class="text-primary">August 2020 -
               Present</span></div>
         </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between
-            mb-5">
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
             <a class="h3 mb-0" href="https://github.com/mezidia/hotel-booking" target="blank">hotel-booking</a>
             <div class="subheading mb-3">C# project with databases</div>
@@ -86,8 +84,7 @@
           <div class="flex-shrink-0"><span class="text-primary">September 2020
               - December 2020</span></div>
         </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between
-            mb-5">
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
             <a class="h3 mb-0" target="blank" href="https://github.com/mezidia/roadmap">roadmap</a>
             <div class="subheading mb-3">Organization roadmap</div>
@@ -132,26 +129,78 @@
     <!-- Education-->
     <section class="resume-section" id="education">
       <div class="resume-section-content">
-        <h2 class="mb-5">Education</h2>
-        <div class="d-flex flex-column flex-md-row justify-content-between
-            mb-5">
+        <h2 class="mb-5">Members</h2>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">Maxim Zavalniuk</h3>
+            <div class="subheading mb-3"><a href="https://github.com/mezgoodle" target="blank">@mezgoodle</a></div>
+            <div>I was born in Vinnytsia, where I received my primary education. I get my higher education in Kyiv, namely, at the NTUU "Igor Sikorsky KPI".</div>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">August 2006 -
-              May 2010</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">July 2020 -
+              Present</span></div>
         </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between">
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">VsIG</h3>
+            <div class="subheading mb-3"><a href="https://github.com/VsIG-official" target="blank">@VsIG-official</a></div>
+            <div>Just small indie developer.</div>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">August 2002 -
-              May 2006</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">July 2020 -
+              Present</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">KERRIGAN</h3>
+            <div class="subheading mb-3"><a href="https://github.com/Dmytrenko-Roman" target="blank">@Dmytrenko-Roman</a></div>
+            <div>Queen of Blades.</div>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">July 2020 -
+              Present</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">fhrr-sht</h3>
+            <div class="subheading mb-3"><a href="https://github.com/fhrr-sht" target="blank">@fhrr-sht</a></div>
+            <div></div>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">September 2020 -
+              Present</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Kostya</h3>
+            <div class="subheading mb-3"><a href="https://github.com/gazinaft" target="blank">@gazinaft</a></div>
+            <div>Reject modernity, embrace postmodernity</div>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">October 2020 -
+              Present</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">La7rodectus</h3>
+            <div class="subheading mb-3"><a href="https://github.com/La7rodectus" target="blank">@La7rodectus</a></div>
+            <div></div>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">September 2020 -
+              Present</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">lizardlynx</h3>
+            <div class="subheading mb-3"><a href="https://github.com/lizardlynx" target="blank">@lizardlynx</a></div>
+            <div></div>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">September 2020 -
+              Present</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Nyukers</h3>
+            <div class="subheading mb-3"><a href="https://github.com/nyukers" target="blank">@nyukers</a></div>
+            <div></div>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">December 2020 -
+              Present</span></div>
         </div>
       </div>
     </section>
