--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#members">Members</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
@@ -127,7 +127,7 @@
     </section>
     <hr class="m-0" />
     <!-- Education-->
-    <section class="resume-section" id="education">
+    <section class="resume-section" id="members">
       <div class="resume-section-content">
         <h2 class="mb-5">Members</h2>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
