--- a/index.html
+++ b/index.html
@@ -208,21 +208,20 @@
     <!-- Skills-->
     <section class="resume-section" id="skills">
       <div class="resume-section-content">
-        <h2 class="mb-5">Skills</h2>
+        <h2 class="mb-5">Our Skills</h2>
         <div class="subheading mb-3">Programming Languages & Tools</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item"><i class="fab fa-html5"></i></li>
           <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
           <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-          <li class="list-inline-item"><i class="fab fa-angular"></i></li>
           <li class="list-inline-item"><i class="fab fa-react"></i></li>
           <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-          <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-          <li class="list-inline-item"><i class="fab fa-less"></i></li>
-          <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-          <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-          <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
           <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+          <li class="list-inline-item"><i class="fab fa-python"></i></li>
+          <li class="list-inline-item"><i class="fab fa-unity"></i></li>
+          <li class="list-inline-item"><i class="fab fa-android"></i></li>
+          <li class="list-inline-item"><i class="fab fa-docker"></i></li>
+          <li class="list-inline-item"><i class="fab fa-php"></i></li>
         </ul>
         <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
