Update skills section

--- a/index.html
+++ b/index.html
@@ -227,19 +227,19 @@
         <ul class="fa-ul mb-0">
           <li>
             <span class="fa-li"><i class="fas fa-check"></i></span>
-            Mobile-First, Responsive Design
+            Responsive Design
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-check"></i></span>
-            Cross Browser Testing & Debugging
+            Cross Platfrom useful applications
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-check"></i></span>
-            Cross Functional Teams
+            Modern technoligies
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-check"></i></span>
-            Agile Development & Scrum
+            Good feedback
           </li>
         </ul>
       </div>
