--- a/index.html
+++ b/index.html
@@ -249,14 +249,8 @@
     <section class="resume-section" id="interests">
       <div class="resume-section-content">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being
-          outdoors. In the winter, I am an avid skier and novice ice climber.
-          During the warmer months here in Colorado, I enjoy mountain biking,
-          free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and
-          fantasy genre movies and television shows, I am an aspiring chef,
-          and I spend a large amount of my free time exploring the latest
-          technology advancements in the front-end web development world.</p>
+        <p>Most of the members of the organization met at the university. We all love to create. We are different, but we find common interests: both at work and at leisure. We spend every day together. If we don't see each other, we meet online.</p>
+        <p class="mb-0">But everyone can tell more about themselves.</p>
       </div>
     </section>
     <hr class="m-0" />
