Update awards section

--- a/index.html
+++ b/index.html
@@ -261,44 +261,15 @@
         <ul class="fa-ul mb-0">
           <li>
             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            Google Analytics Certified Developer
+            Many <i>Coursera</i> courses from @VsIG and @gazinaft
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            Mobile Web Specialist - Google Certification
+            Hacktoberfest 2020
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            1
-            <sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition
-            2009
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            1
-            <sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008
-            (UI Design Category)
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            2
-            <sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition
-            2008
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            1
-            <sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            3
-            <sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005
+            INT20H
           </li>
         </ul>
       </div>
