--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1,
-      shrink-to-fit=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="Main and official site of Mezidia organization" />
   <meta name="author" content="mezidia" />
   <title>Mezidia official page</title>
@@ -23,8 +22,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Mezidia</span>
-      <span class="d-none d-lg-block"><img class="img-fluid img-profile
-            rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
+      <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="Profile image" /></span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -62,7 +60,7 @@
       </div>
     </section>
     <hr class="m-0" />
-    <!-- Experience-->
+    <!-- Projects-->
     <section class="resume-section" id="projects">
       <div class="resume-section-content">
         <h2 class="mb-5">Projects</h2>
@@ -72,8 +70,7 @@
             <div class="subheading mb-3">Flask REST-API </div>
             <p>Test project for creating REST-API with Flask.</p>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">August 2020 -
-              Present</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">August 2020 - Present</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
@@ -81,8 +78,7 @@
             <div class="subheading mb-3">C# project with databases</div>
             <p>Educational project from the university.</p>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">September 2020
-              - December 2020</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">September 2020 - December 2020</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
@@ -90,8 +86,7 @@
             <div class="subheading mb-3">Organization roadmap</div>
             <p>In this repository, you can find the official Mezidia public product roadmap. Our product roadmap is where you can learn about what features we're working on, what stage they're in, and when we expect to bring them to you.</p>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">December 2020 -
-              Present</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">December 2020 - Present</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
@@ -99,20 +94,15 @@
             <div class="subheading mb-3">Portal where you can find job in Mezidia</div>
             <p>Test project for creating REST-API with React-hooks.</p>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">July 2020
-              - Present</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">July 2020 - Present</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
             <a class="h3 mb-0" href="https://github.com/mezidia/Shortcut" target="blank">Shortcut</a>
             <div class="subheading mb-3">Dushila's project</div>
-            <p>Collaboratively administrate empowered markets via
-              plug-and-play networks. Dynamically procrastinate B2C users
-              after installed base benefits. Dramatically visualize customer
-              directed convergence without revolutionary ROI.</p>
+            <p></p>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">January 2021
-              - Present</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between">
           <div class="flex-grow-1">
@@ -120,13 +110,12 @@
             <div class="subheading mb-3">Site on NodeJS</div>
             <p>The goal of this project is to create a website that helps customers find the best prices for buckwheat.</p>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">January 2021
-              - Present</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
         </div>
       </div>
     </section>
     <hr class="m-0" />
-    <!-- Education-->
+    <!-- Members -->
     <section class="resume-section" id="members">
       <div class="resume-section-content">
         <h2 class="mb-5">Members</h2>
@@ -136,8 +125,7 @@
             <div class="subheading mb-3"><a href="https://github.com/mezgoodle" target="blank">@mezgoodle</a></div>
             <div>I was born in Vinnytsia, where I received my primary education. I get my higher education in Kyiv, namely, at the NTUU "Igor Sikorsky KPI".</div>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">July 2020 -
-              Present</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">July 2020 - Present</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
@@ -145,8 +133,7 @@
             <div class="subheading mb-3"><a href="https://github.com/VsIG-official" target="blank">@VsIG-official</a></div>
             <div>Just small indie developer.</div>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">July 2020 -
-              Present</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">July 2020 - Present</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
@@ -154,8 +141,7 @@
             <div class="subheading mb-3"><a href="https://github.com/Dmytrenko-Roman" target="blank">@Dmytrenko-Roman</a></div>
             <div>Queen of Blades.</div>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">July 2020 -
-              Present</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">July 2020 - Present</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
@@ -163,8 +149,7 @@
             <div class="subheading mb-3"><a href="https://github.com/fhrr-sht" target="blank">@fhrr-sht</a></div>
             <div></div>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">September 2020 -
-              Present</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">September 2020 - Present</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
@@ -172,8 +157,7 @@
             <div class="subheading mb-3"><a href="https://github.com/gazinaft" target="blank">@gazinaft</a></div>
             <div>Reject modernity, embrace postmodernity</div>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">October 2020 -
-              Present</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">October 2020 - Present</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
@@ -181,8 +165,7 @@
             <div class="subheading mb-3"><a href="https://github.com/La7rodectus" target="blank">@La7rodectus</a></div>
             <div></div>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">September 2020 -
-              Present</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">September 2020 - Present</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
@@ -190,8 +173,7 @@
             <div class="subheading mb-3"><a href="https://github.com/lizardlynx" target="blank">@lizardlynx</a></div>
             <div></div>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">September 2020 -
-              Present</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">September 2020 - Present</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
@@ -199,8 +181,7 @@
             <div class="subheading mb-3"><a href="https://github.com/nyukers" target="blank">@nyukers</a></div>
             <div></div>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">December 2020 -
-              Present</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">December 2020 - Present</span></div>
         </div>
       </div>
     </section>
