--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#newMembers">New members</a></li>
       </ul>
     </div>
   </nav>
@@ -235,7 +236,7 @@
       </div>
     </section>
     <hr class="m-0" />
-    <!-- Awards-->
+    <!-- Awards -->
     <section class="resume-section" id="awards">
       <div class="resume-section-content">
         <h2 class="mb-5">Awards & Certifications</h2>
@@ -253,6 +254,14 @@
             INT20H
           </li>
         </ul>
+      </div>
+    </section>
+    <!-- New members -->
+    <section class="resume-section" id="newMembers">
+      <div class="resume-section-content">
+        <h2 class="mb-5">New members</h2>
+        <p>If you want to be the <strong>new member of this organization</strong>, write by email or Telegram in <i>About</i> section.</p>
+        <p class="mb-0">We have no requirements, only desire is important. You can learn all additional information from @mezgoodle.</p>
       </div>
     </section>
   </div>
