--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <section class="resume-section" id="about">
       <div class="resume-section-content">
         <h1 class="mb-0">
-          <span class="head-animation">MEZI</span>
-          <span class="text-primary">DIA</span>
+          <span class="text-primary">ME</span>
+          <span class="head-animation">ZIDIA</span>
         </h1>
         <div class="subheading mb-5">
           03056 Politekhnichna Street · Kyiv ·
