--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body id="page-top">
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+    <a class="navbar-brand js-scroll-trigger" href="https://github.com/mezidia" target="blank">
       <span class="d-block d-lg-none">Mezidia</span>
       <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/MezidiaLogoTransparent.png" alt="Profile image" /></span>
     </a>
