Add one more project

--- a/index.html
+++ b/index.html
@@ -105,11 +105,19 @@
           </div>
           <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
         </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between">
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
             <a class="h3 mb-0" href="https://github.com/mezidia/grechka.com" target="blank">grechka.com</a>
             <div class="subheading mb-3">Site on NodeJS</div>
             <p>The goal of this project is to create a website that helps customers find the best prices for buckwheat.</p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between">
+          <div class="flex-grow-1">
+            <a class="h3 mb-0" href="https://github.com/mezidia/mezidia" target="blank">mezidia</a>
+            <div class="subheading mb-3">General site of organization</div>
+            <p>Every organization has a website. So we made it too.</p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
         </div>
